# service/api/api-handler.go
@@ -15,17 +15,16 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.POST("/users/:userid/photos", rt.wrap(rt.uploadPhoto))
 	rt.router.GET("/photos/:photoid", rt.wrap(rt.showPhoto))
 	rt.router.DELETE("/photos/:photoid", rt.wrap(rt.deletePhoto))
-	// rt.router.GET("/users/:username/findUser", rt.wrap(rt.getUserProfile))
 	rt.router.GET("/photos/:photoid/comments/", rt.wrap(rt.listComments))
 	rt.router.POST("/photos/:photoid/comments/", rt.wrap(rt.commentPhoto))
 	rt.router.GET("/photos/:photoid/comments/:commentid", rt.wrap(rt.getComment))
-	// rt.router.PUT("/photos/:photoid/comments/:commentid", rt.wrap(rt.modifyComment))
 	rt.router.DELETE("/photos/:photoid/comments/:commentid", rt.wrap(rt.uncommentPhoto))
 	rt.router.GET("/photos/:photoid/likes/", rt.wrap(rt.listLikes))
 	rt.router.GET("/photos/:photoid/likes/:userid", rt.wrap(rt.getLike))
 	rt.router.POST("/photos/:photoid/likes/:userid", rt.wrap(rt.likePhoto))
 	rt.router.DELETE("/photos/:photoid/likes/:userid", rt.wrap(rt.unlikePhoto))
 	rt.router.GET("/users/:userid/following/", rt.wrap(rt.listFollowed))
+	rt.router.GET("/users/:userid/following/:useridfollowed", rt.wrap(rt.getFollowed))
 	rt.router.PUT("/users/:userid/following/:useridtofollow", rt.wrap(rt.followUser))
 	rt.router.DELETE("/users/:userid/following/:useridtofollow", rt.wrap(rt.unfollowUser))
 	rt.router.GET("/users/:userid/banned/", rt.wrap(rt.listBanned))
